--- a/videoprocessing_input_video.html
+++ b/videoprocessing_input_video.html
@@ -8,7 +8,7 @@
 <body>
 
 
-<p>Form·t MPEG-4, H.264:</p>
+<p>Form√°t MPEG-4, H.264:</p>
 
 <video width="640" height="480" controls>
 <source src="https://i.iinfo.cz/files/root/467/input-video-1.mp4" type='video/mp4; codecs="avc1.42E01E, mp4a.40.2"'>
